new_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-new-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: reghub.com
    - http:
        paths:
          - path: /login
            pathType: Prefix  
            backend:
              service:
                name: front-service
                port:
                  number: 80
          - path: /loginbackend
            pathType: Prefix  
            backend:
              service:
                name: my-service
                port:
                  number: 80
